# DjangoChatGPT

./: .gitignore  README.md  pyproject.toml  requirements.txt
chatgptclient/: manage.py
chatgptclient/chatgptclient/: asgi.py  settings.py  urls.py  wsgi.py
chatgptclient/client_app/: admin.py  chat.py  models.py  views.py
chatgptclient/client_app/migrations/: 0001_initial.py
chatgptclient/static/: app.js  styles.css
chatgptclient/templates/: base.html  index.html  login.html
